--- a/cluster/apps/default/kometa/secret.sops.yaml
+++ b/cluster/apps/default/kometa/secret.sops.yaml
@@ -5,16 +5,16 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    PLEX_TOKEN: ENC[AES256_GCM,data:ooQhchNc8mABz0z/oGnS8NXPoe4=,iv:/XwU/Ti1xHrCdHE2x6IwtxC/pNHbxE25hGnggmKIZek=,tag:LeJX8G+NoJx8zOvcSGSPRg==,type:str]
-    TMDB_API_KEY: ENC[AES256_GCM,data:b+08Tjr/SDiznRgRSEqY5NNjdciGBP6vQartd2SF82k=,iv:Qas21J/ACoEgc3YVtIPvjj7+JDh+LjTFFbCG9LPIauo=,tag:jG9LKlNgL/XMRDFNQjHXrw==,type:str]
-    RADARR_API_KEY: ENC[AES256_GCM,data:t02HRflpiuFT4tMKjs1NfIqJV6wHNZfh4DvMO87Giok=,iv:ZwVUv6mrB6oo5wn703Pq0UypOxYMiMRK0Th9XxmpqfI=,tag:w90RiULakUxzBLsD/nhJ2g==,type:str]
-    TRAKT_CLIENT_ID: ENC[AES256_GCM,data:tZkmWbwsLGPv52anCEd9lZMdBxqhHT1JunbC0aGTKPzS93BuZqb1YC38KWYXyYUjdw7qyc2a00naHgoCxTaIBg==,iv:C50+QtRSBtM9usVKk/K4/Yuzf8mqPQ2MwE0v1ztZM9E=,tag:4yltJ2s3TtlL00m2Zx3XIg==,type:str]
-    TRAKT_CLIENT_SECRET: ENC[AES256_GCM,data:tjG+vakuTN9NySf7TzkAF/yBHK3ccCy6Y7pOin6ukXUMibXfOWGSktOihXJViOVAQ6KGGEO0JM65qXDjIaTkAA==,iv:kK8wlvNXlzk/4KlrBFMPD1ISdsKPTom0xcjL6FZenxU=,tag:hajJ9j4EQy7zhmquzGriNQ==,type:str]
-    TRAKT_ACCESS_TOKEN: ENC[AES256_GCM,data:oiZRBCV+m3lPkqnryueEHWCH0wWgnXenbOdosFNuwAdKHhq5UR3U9xT6H4um49D23VBoY2QUh+fFphRaK/DNoA==,iv:T4/4tCDU/yUx70kZuQmbO8Imci/JZYSncVXi2irlupA=,tag:j7N4PFowM2kMV9ybrPxuAA==,type:str]
-    TRAKT_REFRESH_TOKEN: ENC[AES256_GCM,data:A8Z2aBrgcaEKBTBlaJX9qZGVyxhuWbzawXw4vqylykBA+b5+TEfb8ubv1Fw3UTdPwaxffhssaBE8sOayuywn9Q==,iv:S8S7p/cUiO/RtGrlF/Hrdl6T1YkfBFG/XWbmLQNwprc=,tag:KWK70+ndv+RbbM3z+mnLTQ==,type:str]
-    TRAKT_CREATED_AT: ENC[AES256_GCM,data:fQx9Hek9cWdkPw==,iv:zF3+mHhWic5ouux1/uD0PHkY+DbfN1+PGJCFHzaHpvM=,tag:sKOAdWPj8rpTejkYqEXFLQ==,type:str]
-    SONARR_API_KEY: ENC[AES256_GCM,data:sWKwwphtJHarwZf6Wv2B384wAehj3f1Axti0V/EZQgc=,iv:BqawvfP71YV9GA6fUFq7UtOe1uRPbQsZbgdR3m2WC7c=,tag:SK2a1Ia4P/IEluakXWTGqw==,type:str]
-    NOTIFIARR_API_KEY: ENC[AES256_GCM,data:nspaSRFyoR8KEJIl2NjWv1mWBe5GBO+0PpSPiWE4SrRJgav8,iv:q+k7dfxVmwxiiKYBHndJ8HDDER6hQUPZ/bpYFiCi1nE=,tag:hujawcY031axuvz78vIzLQ==,type:str]
+    PLEX_TOKEN: ENC[AES256_GCM,data:7CQN61LLBARlq+CCvGqRRxqvbIU=,iv:H0VnA6MDtXIyQokq3ygDeDaWbEWTdyydBtWdwVxX+fg=,tag:TdZc+B0ZsjcHuah+l65hbQ==,type:str]
+    TMDB_API_KEY: ENC[AES256_GCM,data:1KHuw1PrxviD2VnVMliFV+RemPPOhan+BrAIhztCv20=,iv:FM3JPfotCSw8Fftv609tpCJLumi0Wva3ExnIYlpGzeg=,tag:p1etO+Z9U5uVqgfKvtN7uw==,type:str]
+    RADARR_API_KEY: ENC[AES256_GCM,data:w61HDJ0qynZaGy0K1Fad/uIqOo0kVEzZkxj6AqaF1a4=,iv:6RiM/pSKrQBQC6HVpuogZJQZfK2IkzySySCdKSRXL1o=,tag:28Z+vbg+/n1ipZSYAwadjA==,type:str]
+    TRAKT_CLIENT_ID: ENC[AES256_GCM,data:MoJ/PdftOhkyn0N9OdZsPrv04jFV3RlXrh3lWOIB82ZyCsdLeVPwGMqjaUo+zVI5/Ibywwbv7zXv8Oey6BhP8w==,iv:ZAQ7pYHuRAlKjK/udrfuFHylTMWza5jKsfW/5u2HObI=,tag:HznpR/4yMMX2Z8jjx0kXPg==,type:str]
+    TRAKT_CLIENT_SECRET: ENC[AES256_GCM,data:dmrRDUIT9WD4LJBoJjedGXVSmkD/DVcIgc7ZAikwGG1t4TG6HSGGX0hDwW9ofbvmnDUV6Bt0BirHmQACeoQ8rg==,iv:dGmMbIOPVGUkSs1rTZJWEpV30MXT0z+8YToWhwjpNJQ=,tag:ddxi/2ghhwOpJky3hD1uAw==,type:str]
+    TRAKT_ACCESS_TOKEN: ENC[AES256_GCM,data:NzYD3SXgnEyvaf804D4DQ4KBnL7Z5qErP5RvZe25fV996tUgWKVNPfiKL92dzmB5lqu9xzDe3NZCF7sVGh1MSA==,iv:57oQRtxL+TdncCMRA3hlKhWxsK2eCQMQiaw3xm7K1uU=,tag:K590CizkAiInCWgU4UgqNg==,type:str]
+    TRAKT_REFRESH_TOKEN: ENC[AES256_GCM,data:9B+6gdlFgOHfUkYtaIB9LvrFjM+IyAYgoHwhGn/fdbFXIrYcZg/fyKK0/JBqY/ffLbUODQ09KAWEso03/sSgYA==,iv:tQq7a17GFwpOLIbtfOA0aSsI2urpmsczz8O1LjncYew=,tag:PD9b6X00fr7w/a6xl/Qjfw==,type:str]
+    TRAKT_CREATED_AT: ENC[AES256_GCM,data:VBw1f45mqhvvLA==,iv:bw+quTmVWWfbb+K2HW5mYxOPDQnd4pNW7GRXAmZwTWo=,tag:wgWt5WccpoLwQFdaliSZ2A==,type:str]
+    SONARR_API_KEY: ENC[AES256_GCM,data:WccAfbxe/0Lu4xhobs4QeA/IfCf6zrCp/NBUIbPJN88=,iv:mVwhRLzuaOXtjpUmkRtb5tX5n6O3q/ZBiNfLKI3afFw=,tag:HUEigfezFQLr1yyzrP0XuA==,type:str]
+    NOTIFIARR_API_KEY: ENC[AES256_GCM,data:knDiN6P0S2xcp9DTxMdlMC3v3pAbWSEnHTDGop0J57vJvWjR,iv:iapTQk/dPBwNId7W5bwxpkuhY2ifJAZQtB6Rj12vlP8=,tag:tjYjvX5e/1fMvTB/gJp17w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,14 +24,14 @@ sops:
         - recipient: age1r7u0qylrvurhvcaxjurqrflx2ey96lx5gzar6r8d9ctl6rzqg5gqu94ek4
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5ZFN4VndFd0VZYWZ0SS9a
-            cG9URXBhRTdMV00zaWVDbzN1ZUs5TWQyempNCk1UV1BpN0s2QnYrdUE2blpQSVpQ
-            L2ptRGFjK0g0SUcyaFRIcXhSREtuM2cKLS0tIHMzZFdIbG1RQitPb2xuQ3prVkdS
-            TEVabUJlcUljR0IyLzF5eEtsQXJrQ0UKmkI4duGS/wlzsnHqwwRO9RhgzFPV6m2P
-            mg+am0fvDsTkkpiRJ0GmIgQ3GzVGKT86s51RmcRDy3fkPpUYPe2gaw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuL1FDZnphTnNJLzJBUUVr
+            VGhSY3BUSVhrbmhXbWJWa3JMTkZ3cS9xTDNFCk9qazF6UjRPUVoyMjVsZVBRZVRJ
+            YXJlYkFXcGNwY3BaNEx4WnFOTEJ6UmMKLS0tIC90Q2Z3ekxFWWc0cUVQcUlDcmlK
+            eE5LUkhrRTlMVFBUTWdtek0yUXhTb2sKp7hdI2wbaI7mqxMLgoOgDWPbGcdh0wsI
+            jxE/QEj+4e/vK/L0t/4uhA8wwXNMwgG+bxvtfuYq+CdszQYWRllJmg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-02-24T11:13:52Z"
-    mac: ENC[AES256_GCM,data:v0ZA6zAPtZL/XvfagV69xhKMrclxK4CEGvoKRVRWLmHkZLg+szOqK2EqwANfO0U0S9PNFXAT/wI+RHyj9NfZhuR1Y8d/moXqzXVedMgJrRfLMJS8eBwoChQlmvivk5y8k7UFVuRGa0zOamLAa6WTUUSS/XL/7+oMgsOWICr6/AA=,iv:tCY6JwFGcf0fGz7SYZTkrYM4rPzlSV8c/+zjIKg6VnI=,tag:cQNyg9ljZmWridAbm4R6bg==,type:str]
+    lastmodified: "2026-02-26T17:05:34Z"
+    mac: ENC[AES256_GCM,data:Nkq0wgdSbMxiuJu7GzYMzeT8aMJmakrvYUSycsztxZvQASQEC6/hWca9VKvoU5CUovRO6j08jTnu3z0XZIOo1gRFyMuRvCtCRV8NgVIg9hODoU5FW4A2ysm6jS0QLM9UlesJ9Vv7tyOEpWwHDDumw10nSENWmALGAfYitXWAwgA=,iv:XtNXUPmqPT9dXAt0QEwnCSebegWjsIzPc0nC1r7Whao=,tag:gAenLl3AC1wGbbkSfFebOQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
