--- a/cluster/apps/default/plex-trakt-sync/config/config.yml
+++ b/cluster/apps/default/plex-trakt-sync/config/config.yml
@@ -9,8 +9,8 @@ logging:
 sync:
   plex_to_trakt:
     collection: false
-    ratings: true
-    watched_status: true
+    ratings: false
+    watched_status: false
     watchlist: true
   trakt_to_plex:
     liked_lists: false
