Kometa: CronJob with PVC, fresh Trakt tokens, 30min schedule

--- a/cluster/apps/default/kometa/kustomization.yaml
+++ b/cluster/apps/default/kometa/kustomization.yaml
@@ -4,7 +4,7 @@ namespace: default
 resources:
   - ./secret.sops.yaml
   - ./config-pvc.yaml
-  - ./deployment.yaml
+  - ./cronjob.yaml
 configMapGenerator:
   - name: kometa-libraries
     files:
