--- a/cluster/apps/default/kometa/secret.sops.yaml
+++ b/cluster/apps/default/kometa/secret.sops.yaml
@@ -5,16 +5,16 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    PLEX_TOKEN: ENC[AES256_GCM,data:7CQN61LLBARlq+CCvGqRRxqvbIU=,iv:H0VnA6MDtXIyQokq3ygDeDaWbEWTdyydBtWdwVxX+fg=,tag:TdZc+B0ZsjcHuah+l65hbQ==,type:str]
-    TMDB_API_KEY: ENC[AES256_GCM,data:1KHuw1PrxviD2VnVMliFV+RemPPOhan+BrAIhztCv20=,iv:FM3JPfotCSw8Fftv609tpCJLumi0Wva3ExnIYlpGzeg=,tag:p1etO+Z9U5uVqgfKvtN7uw==,type:str]
-    RADARR_API_KEY: ENC[AES256_GCM,data:w61HDJ0qynZaGy0K1Fad/uIqOo0kVEzZkxj6AqaF1a4=,iv:6RiM/pSKrQBQC6HVpuogZJQZfK2IkzySySCdKSRXL1o=,tag:28Z+vbg+/n1ipZSYAwadjA==,type:str]
-    TRAKT_CLIENT_ID: ENC[AES256_GCM,data:MoJ/PdftOhkyn0N9OdZsPrv04jFV3RlXrh3lWOIB82ZyCsdLeVPwGMqjaUo+zVI5/Ibywwbv7zXv8Oey6BhP8w==,iv:ZAQ7pYHuRAlKjK/udrfuFHylTMWza5jKsfW/5u2HObI=,tag:HznpR/4yMMX2Z8jjx0kXPg==,type:str]
-    TRAKT_CLIENT_SECRET: ENC[AES256_GCM,data:dmrRDUIT9WD4LJBoJjedGXVSmkD/DVcIgc7ZAikwGG1t4TG6HSGGX0hDwW9ofbvmnDUV6Bt0BirHmQACeoQ8rg==,iv:dGmMbIOPVGUkSs1rTZJWEpV30MXT0z+8YToWhwjpNJQ=,tag:ddxi/2ghhwOpJky3hD1uAw==,type:str]
-    TRAKT_ACCESS_TOKEN: ENC[AES256_GCM,data:NzYD3SXgnEyvaf804D4DQ4KBnL7Z5qErP5RvZe25fV996tUgWKVNPfiKL92dzmB5lqu9xzDe3NZCF7sVGh1MSA==,iv:57oQRtxL+TdncCMRA3hlKhWxsK2eCQMQiaw3xm7K1uU=,tag:K590CizkAiInCWgU4UgqNg==,type:str]
-    TRAKT_REFRESH_TOKEN: ENC[AES256_GCM,data:9B+6gdlFgOHfUkYtaIB9LvrFjM+IyAYgoHwhGn/fdbFXIrYcZg/fyKK0/JBqY/ffLbUODQ09KAWEso03/sSgYA==,iv:tQq7a17GFwpOLIbtfOA0aSsI2urpmsczz8O1LjncYew=,tag:PD9b6X00fr7w/a6xl/Qjfw==,type:str]
-    TRAKT_CREATED_AT: ENC[AES256_GCM,data:VBw1f45mqhvvLA==,iv:bw+quTmVWWfbb+K2HW5mYxOPDQnd4pNW7GRXAmZwTWo=,tag:wgWt5WccpoLwQFdaliSZ2A==,type:str]
-    SONARR_API_KEY: ENC[AES256_GCM,data:WccAfbxe/0Lu4xhobs4QeA/IfCf6zrCp/NBUIbPJN88=,iv:mVwhRLzuaOXtjpUmkRtb5tX5n6O3q/ZBiNfLKI3afFw=,tag:HUEigfezFQLr1yyzrP0XuA==,type:str]
-    NOTIFIARR_API_KEY: ENC[AES256_GCM,data:knDiN6P0S2xcp9DTxMdlMC3v3pAbWSEnHTDGop0J57vJvWjR,iv:iapTQk/dPBwNId7W5bwxpkuhY2ifJAZQtB6Rj12vlP8=,tag:tjYjvX5e/1fMvTB/gJp17w==,type:str]
+    PLEX_TOKEN: ENC[AES256_GCM,data:3ttcQJeQnQd4xsRCl9BzObKM+eA=,iv:Aw3tYzAnuX4DljmB/U5EgBLbDYhQCdE9vrsY5UUDf18=,tag:NGI7VbQaiHx+wTcI0bBGww==,type:str]
+    TMDB_API_KEY: ENC[AES256_GCM,data:ZL0iuDEs6P5I36rUj4noqTmohLpoKvJIm5AdU8q3Ac4=,iv:+eBHOwY4t7V1W6DuVPsKVYZXggbygl/pbBjtDpt5Tno=,tag:gQtLPCCNkQahUlN3SBjk1A==,type:str]
+    RADARR_API_KEY: ENC[AES256_GCM,data:aA7gtQ0hm2lKB1FZk1iK+ba7+j2NdlgwsNegONKWbzY=,iv:enhZEKX77reoPdE+BLx2IdcbXcyUPPVbAd/WphmyHbo=,tag:bOcglWvJdNYGDuj5pcpAWw==,type:str]
+    TRAKT_CLIENT_ID: ENC[AES256_GCM,data:+xQrzImBDhWAJUQZ1q9n9pinikFKRiY1Ifl4/7zAbWtEZR247vp/e6hne3JT5yBTDW93j0uev/sgGMmssx0DoQ==,iv:wYP35yPNEzhks4aXB83dWGNP06akaUkoD0r/z+oRGD4=,tag:9anjDD6cuRF9zOGnOjh39A==,type:str]
+    TRAKT_CLIENT_SECRET: ENC[AES256_GCM,data:6W496738Ta1TjFSLSwqyf59ivmcCL6hy/dIJ2xTdOxO6cFXiu6x3fX3y0QK5ZpqneD2pA6iiL1M2Kc7ozwFe8w==,iv:ECzMtNYeMPg0N3TPBdtuVSHnMiTOkFLY59RKRxEvI7g=,tag:f6pmk+hnfZgMKwp1MGnqWg==,type:str]
+    TRAKT_ACCESS_TOKEN: ENC[AES256_GCM,data:B9gYICrX4cFS+R0ivn3ylxxR2yL4A7xokN6b9LZ4BePG4I3/zQfNOR7n2iGlMHILHjAFJzY5o6NZBDkJiogKhA==,iv:ZXhrBok4tbfzC0iLs2sKJy8TjRB2EV0+RA/KKcmAg/k=,tag:QqNpzsazKSKnjyOykgKz+g==,type:str]
+    TRAKT_REFRESH_TOKEN: ENC[AES256_GCM,data:3FMSV6WuZe14DCmRk54JMwMnouEKBWf0pyJNr45bjFpSw+jAd3rpOWWH1pIO7W1+dA2hH05ctWSweCFgORxllQ==,iv:QlUIqTZJs3PAzaxlVF16jR8AR7k6Hors8UrFFQrfuos=,tag:eh8sKklXVGvIapJ7MSXAAw==,type:str]
+    TRAKT_CREATED_AT: ENC[AES256_GCM,data:+5WsOdW/J/vLGA==,iv:QEHVTpmSwrWEUlRicWZC2hJCR4dN0qk7AgZMg/lemek=,tag:eeqm1cRwB36AgL5rtiVQiA==,type:str]
+    SONARR_API_KEY: ENC[AES256_GCM,data:WoFYo2/2Vl/pWoyf6VtlqFSz1pT+K0CuOvWVvDG9hs0=,iv:OcPyP4YuocEM2mMQTQyRJPq3Bjc0g6p9alkSOGcWDsQ=,tag:s8o6vMqoNf9l3/dHgB4Bwg==,type:str]
+    NOTIFIARR_API_KEY: ENC[AES256_GCM,data:NAU7C1HpzBGBcA82/tqLiJm+UAi0jnvGnLG0KRHBPD9wGNjo,iv:f2FjohcicyiRlwZ9yVFX70IxM6LPuKSJaNeA4Hv5MZ8=,tag:tsSVqLsy/ZFktEIrxWgalw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,14 +24,14 @@ sops:
         - recipient: age1r7u0qylrvurhvcaxjurqrflx2ey96lx5gzar6r8d9ctl6rzqg5gqu94ek4
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuL1FDZnphTnNJLzJBUUVr
-            VGhSY3BUSVhrbmhXbWJWa3JMTkZ3cS9xTDNFCk9qazF6UjRPUVoyMjVsZVBRZVRJ
-            YXJlYkFXcGNwY3BaNEx4WnFOTEJ6UmMKLS0tIC90Q2Z3ekxFWWc0cUVQcUlDcmlK
-            eE5LUkhrRTlMVFBUTWdtek0yUXhTb2sKp7hdI2wbaI7mqxMLgoOgDWPbGcdh0wsI
-            jxE/QEj+4e/vK/L0t/4uhA8wwXNMwgG+bxvtfuYq+CdszQYWRllJmg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4T0RnMHZibWlBWFBjM3U4
+            TysyeVVpb3NDSjNSc24yQ0t3dzZMWEtpWG40CnFCeUsrOSs1VVcyNkxuV2pNak1T
+            OUZJcUxYWjRlNFc1VUhGK1RxV2RyTm8KLS0tIGhPQlFLN0FrS25tVEtXM3ROZ3Uv
+            WXd4VitXUUFMSmFGQ3R1RUx1SGhUTjgK/fHz1N/rdBoMTvZtyL0d8qWO8g6cMQ54
+            apzSDgIFggvPQaARTfiCgH28pc4GLFb7mHawgcEXEIb9FVlY11NnKQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-02-26T17:05:34Z"
-    mac: ENC[AES256_GCM,data:Nkq0wgdSbMxiuJu7GzYMzeT8aMJmakrvYUSycsztxZvQASQEC6/hWca9VKvoU5CUovRO6j08jTnu3z0XZIOo1gRFyMuRvCtCRV8NgVIg9hODoU5FW4A2ysm6jS0QLM9UlesJ9Vv7tyOEpWwHDDumw10nSENWmALGAfYitXWAwgA=,iv:XtNXUPmqPT9dXAt0QEwnCSebegWjsIzPc0nC1r7Whao=,tag:gAenLl3AC1wGbbkSfFebOQ==,type:str]
+    lastmodified: "2026-02-26T17:46:04Z"
+    mac: ENC[AES256_GCM,data:tPEoeuV7GIZvIp3L26JIdLKFgXSGH0UcBW1WG4/wOAtpZ7t25P+4B6zWT/bNVCFiELSxF6eEMCobZpxVeo6DCPoqPCvmzQaLbM3fR2iVZX3BlgmU2WcoOqZI++OMER+JBzH3KRtILeVObvAdQsch1wkBRcRDTP25Jaz8kj18d4s=,iv:3HD/R80BRI35QU6UKHgG2T7IW2Gv3Itpu3EoXM/Zp4Y=,tag:zsBxsRr1lZjusCalR4lajQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
