Update Kometa Trakt tokens

--- a/cluster/apps/default/kometa/secret.sops.yaml
+++ b/cluster/apps/default/kometa/secret.sops.yaml
@@ -5,16 +5,16 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    PLEX_TOKEN: ENC[AES256_GCM,data:3ttcQJeQnQd4xsRCl9BzObKM+eA=,iv:Aw3tYzAnuX4DljmB/U5EgBLbDYhQCdE9vrsY5UUDf18=,tag:NGI7VbQaiHx+wTcI0bBGww==,type:str]
-    TMDB_API_KEY: ENC[AES256_GCM,data:ZL0iuDEs6P5I36rUj4noqTmohLpoKvJIm5AdU8q3Ac4=,iv:+eBHOwY4t7V1W6DuVPsKVYZXggbygl/pbBjtDpt5Tno=,tag:gQtLPCCNkQahUlN3SBjk1A==,type:str]
-    RADARR_API_KEY: ENC[AES256_GCM,data:aA7gtQ0hm2lKB1FZk1iK+ba7+j2NdlgwsNegONKWbzY=,iv:enhZEKX77reoPdE+BLx2IdcbXcyUPPVbAd/WphmyHbo=,tag:bOcglWvJdNYGDuj5pcpAWw==,type:str]
-    TRAKT_CLIENT_ID: ENC[AES256_GCM,data:+xQrzImBDhWAJUQZ1q9n9pinikFKRiY1Ifl4/7zAbWtEZR247vp/e6hne3JT5yBTDW93j0uev/sgGMmssx0DoQ==,iv:wYP35yPNEzhks4aXB83dWGNP06akaUkoD0r/z+oRGD4=,tag:9anjDD6cuRF9zOGnOjh39A==,type:str]
-    TRAKT_CLIENT_SECRET: ENC[AES256_GCM,data:6W496738Ta1TjFSLSwqyf59ivmcCL6hy/dIJ2xTdOxO6cFXiu6x3fX3y0QK5ZpqneD2pA6iiL1M2Kc7ozwFe8w==,iv:ECzMtNYeMPg0N3TPBdtuVSHnMiTOkFLY59RKRxEvI7g=,tag:f6pmk+hnfZgMKwp1MGnqWg==,type:str]
-    TRAKT_ACCESS_TOKEN: ENC[AES256_GCM,data:B9gYICrX4cFS+R0ivn3ylxxR2yL4A7xokN6b9LZ4BePG4I3/zQfNOR7n2iGlMHILHjAFJzY5o6NZBDkJiogKhA==,iv:ZXhrBok4tbfzC0iLs2sKJy8TjRB2EV0+RA/KKcmAg/k=,tag:QqNpzsazKSKnjyOykgKz+g==,type:str]
-    TRAKT_REFRESH_TOKEN: ENC[AES256_GCM,data:3FMSV6WuZe14DCmRk54JMwMnouEKBWf0pyJNr45bjFpSw+jAd3rpOWWH1pIO7W1+dA2hH05ctWSweCFgORxllQ==,iv:QlUIqTZJs3PAzaxlVF16jR8AR7k6Hors8UrFFQrfuos=,tag:eh8sKklXVGvIapJ7MSXAAw==,type:str]
-    TRAKT_CREATED_AT: ENC[AES256_GCM,data:+5WsOdW/J/vLGA==,iv:QEHVTpmSwrWEUlRicWZC2hJCR4dN0qk7AgZMg/lemek=,tag:eeqm1cRwB36AgL5rtiVQiA==,type:str]
-    SONARR_API_KEY: ENC[AES256_GCM,data:WoFYo2/2Vl/pWoyf6VtlqFSz1pT+K0CuOvWVvDG9hs0=,iv:OcPyP4YuocEM2mMQTQyRJPq3Bjc0g6p9alkSOGcWDsQ=,tag:s8o6vMqoNf9l3/dHgB4Bwg==,type:str]
-    NOTIFIARR_API_KEY: ENC[AES256_GCM,data:NAU7C1HpzBGBcA82/tqLiJm+UAi0jnvGnLG0KRHBPD9wGNjo,iv:f2FjohcicyiRlwZ9yVFX70IxM6LPuKSJaNeA4Hv5MZ8=,tag:tsSVqLsy/ZFktEIrxWgalw==,type:str]
+    PLEX_TOKEN: ENC[AES256_GCM,data:EMI4ZIhC5LsquC/zVfsCOMX4nDY=,iv:BcLqwCWNA9GyEGZR1TA7YwJNVkNFMUFZSzG5n9kA+eA=,tag:QHCoGw+sD6bndq4NjesugA==,type:str]
+    TMDB_API_KEY: ENC[AES256_GCM,data:5Kcf6RinWFDTtUKZX7pQG3/E8kbYoiE0MPKSAJEji/g=,iv:AUwVWDw7kP/vAGUKzEdqr92Ny8opDb9axdVvnluG9+4=,tag:QhDup3WvB05PnGoqRWgrGw==,type:str]
+    RADARR_API_KEY: ENC[AES256_GCM,data:Bj/pNISri/MXCM9d0g5a3aGI+b/8f6o9XKliECgoPIU=,iv:utzi7W6uIrJI0nSSk4m0/6ZCsYO6BStoZhWhICDpjm8=,tag:PFVhoauR37yDMaHf1XrxYw==,type:str]
+    TRAKT_CLIENT_ID: ENC[AES256_GCM,data:BAFLds9UyTV/18PSe8mNTVVo4cbr01ZgA2/ZDgFEn4XgRqNcQJiBH1SZ0oeTrZEE2Tjquu3Y/jTxe31FxTkr/Q==,iv:PyTA4GL9D1SWTSJdWYkp28H5Be5C+EvEe5W4n/q6wtE=,tag:5rWMUwniXbhA/Hww5XuwXg==,type:str]
+    TRAKT_CLIENT_SECRET: ENC[AES256_GCM,data:mA049MRSgiI/XOfeyJSnUCtjOA7M6lORoVxzWeXAg1V6OQPV0iJCNuhJj1fqntJP5ZIYdr2aDvOl7zLtviwJHg==,iv:E25WlmqpwWtlZY5/eqJpbNH0hF/onbvQHIUJWvhlmNA=,tag:wLiUJ7RwR10ua1/mXb9TvQ==,type:str]
+    TRAKT_ACCESS_TOKEN: ENC[AES256_GCM,data:zoNBjze8l433PWgI0Fqr2eBEqGlcLyqRAkd2I6K6bIKxXqBJsy7n2RHQkK0qT2k5f8Pgw9WNxGpOMwCefdPElA==,iv:vp3NPdZ+rt6DMqy9+cn7mpcUZ4o2ZvYXMGgSQCMIX7A=,tag:fsNnqXT6rjroz6zgqvwIww==,type:str]
+    TRAKT_REFRESH_TOKEN: ENC[AES256_GCM,data:e0xrlvFG/Ac55amGZPQ+bP0uhd6qwKyDjql+oJ2Aa8eghz5uBGQUFPC54cu+QGv3GGDavz9Y1qG413DBxIvLuQ==,iv:Ntsb+JdUKVrX0Fn1UXAleFAbqQ4IaGdYAXIg7k6qN2s=,tag:kCgYLGh8K0tn/pFraNsG7A==,type:str]
+    TRAKT_CREATED_AT: ENC[AES256_GCM,data:C2mGGS373LNDGA==,iv:kxzXOGQ+W51FN04nMCHHu+DSSqfEz5bvtRnrpgNDSA8=,tag:QstclEweXhY/dA/q1ewW5w==,type:str]
+    SONARR_API_KEY: ENC[AES256_GCM,data:GrmXIHXNWKvbcH8qBKKj+2+W35e5BclZ9ZdKnqCi3cg=,iv:3haI2uPBU8FZrtI9b8DmkqNWUPmjb+wbNo9D3S+iQIE=,tag:1jvdJCpid8IkVxwKBwTkzg==,type:str]
+    NOTIFIARR_API_KEY: ENC[AES256_GCM,data:RMiR07spZeN7CE2RkLfd2IAvQwWowDWInbJVdtNDnOZE7cGJ,iv:4pAkZvN+yXwRs0Jf0pGWOF576Am9oN54CnJgUKidwfU=,tag:z7ft/JDjtFkY+XoO6L3Bvg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,14 +24,14 @@ sops:
         - recipient: age1r7u0qylrvurhvcaxjurqrflx2ey96lx5gzar6r8d9ctl6rzqg5gqu94ek4
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4T0RnMHZibWlBWFBjM3U4
-            TysyeVVpb3NDSjNSc24yQ0t3dzZMWEtpWG40CnFCeUsrOSs1VVcyNkxuV2pNak1T
-            OUZJcUxYWjRlNFc1VUhGK1RxV2RyTm8KLS0tIGhPQlFLN0FrS25tVEtXM3ROZ3Uv
-            WXd4VitXUUFMSmFGQ3R1RUx1SGhUTjgK/fHz1N/rdBoMTvZtyL0d8qWO8g6cMQ54
-            apzSDgIFggvPQaARTfiCgH28pc4GLFb7mHawgcEXEIb9FVlY11NnKQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvRkhOMDhObGF3YXNKZmZa
+            RGJpQ1IxVkRFb2l3blZzbVVySzBDTTNXVXowCis5TEZ4K2dGaXc3eU5kS0k3TWZR
+            dGVza3NLU3krLzhOVHdzYlZLbC9FUjQKLS0tIDBES3R6K3JPR28zMm1BMmlxcHd3
+            dVF1REsvUHdFWE9GRFVBNy9JcHpmNnMKC7Rl4p8djE8imzOoBEvxjr67kxYlXYUY
+            Qzz0rFAfOeavQPCmlIecKQ/EFwbtXDNMCtJtoulUlb99xVCuV5t/sA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-02-26T17:46:04Z"
-    mac: ENC[AES256_GCM,data:tPEoeuV7GIZvIp3L26JIdLKFgXSGH0UcBW1WG4/wOAtpZ7t25P+4B6zWT/bNVCFiELSxF6eEMCobZpxVeo6DCPoqPCvmzQaLbM3fR2iVZX3BlgmU2WcoOqZI++OMER+JBzH3KRtILeVObvAdQsch1wkBRcRDTP25Jaz8kj18d4s=,iv:3HD/R80BRI35QU6UKHgG2T7IW2Gv3Itpu3EoXM/Zp4Y=,tag:zsBxsRr1lZjusCalR4lajQ==,type:str]
+    lastmodified: "2026-02-26T18:10:14Z"
+    mac: ENC[AES256_GCM,data:VKDwsb4V7Hax2KxHWFje6pc7qXu4J4DLd4dE+6BgLfPBFj32Kfbwd6LactD9klnlq4HScsryNnpoo0nrjupSq8i3c+KVQpU6x+CvFXZMLs3m4p+Blu5KPNI1qhONaJKRP53CY2jGjPXY+y+7BCUhgfgyrArkjTlwZu3h++HBgXM=,iv:5SmM/OZ4zf+SUgeU4Fl5RMKoQMCZtgcdoWw8eKQTVDk=,tag:KPytGi9EyZzriLTw/r9LfQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
